# diagrams

./: .gitignore  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  WORKSPACE  docker-executor.dot  docker-in-docker-build.dot  experian-v2.dot  go.mod  nginx-ec2.puml  nginx-k8s.puml  versionservice.dot
.github/: renovate.json
.github/workflows/: bazel.yml
amz/: BUILD.bazel  example.go
buildbarn/: BUILD.bazel  buildbarn.dot
bzl/: graphviz.bzl  macros.bzl
dot/: BUILD.bazel  buildcontainers.dot  docgeneology.dot  docker-in-docker.dot  experian-v2p.dot  experian.dot  infra.dot  k8s-build-dependencies.dot  loadbalancer.dot
toolchains/dot/: BUILD.bazel  BUILD.tpl  dot.bzl  dot_configure.bzl  tool.bzl
