module(name = "chickenandpork_diagrams")

bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.36.0", repo_name = "bazel_gazelle")
#bazel_dep(name = "bazel_skylib", version = "1.7.1")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download()

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_blushft_go_diagrams")

fsd = use_repo_rule("//toolchains/dot:dot_configure.bzl", "_find_system_dot")

register_toolchains("//toolchains/dot:current_dot_toolchain", "//toolchains/dot:dot_missing_toolchain")

fsd(
    name = "system_dot",
    verbose = True,
)
